2014-12-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* strhash.c: Include <stddef.h>.
	(strhash_get): Fix malloc argument to avoid wasting bytes -- allocate
	offsetof(strhash_entry, s[len+1]) instead of sizeof(*ent)+len.

2014-11-03         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* AUTHORS: Improve.

2014-11-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Use local AC_GAWKEXTLIB macro in shared/gawkext.m4
	to eliminate code duplication.

2014-10-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	gawkextlib is now a separate package.

2014-07-15         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Version 0.5.1.

2014-04-18         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Version 0.5.0.
	(GCCFLAGS): Add more warning flags.
	* README: Note that this version now requires gawk 4.1.1 or later.
	* varinit.c (gawk_api_varinit_scalar, gawk_api_varinit_constant): Use
	gawk_free to release memory.

2013-12-05         Hiroshi Saito     <hiroshi@winpg.jp>

	* configure.ac: fixed hpdf.h check header.
	* README: add pdf infomation.
	* pdf.c: support different versions for libharu.
	* pdf.h: fixed typo.
	* test/ Makefile.am, pdf.png, pdftest.awk, pdftest.ok: add support.

2013-11-21         Hiroshi Saito     <hiroshi@winpg.jp>

	* configure.ac: Add Configured with --enable-pdf option.
	add the pdf extension module.

2013-09-12         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Version 0.4.9.

2013-09-12         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Version 0.4.8.

2013-05-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Version 0.4.7.
	* README: Update to reflect the release of gawk 4.1.

2013-04-17         Andrew J. Schorr     <aschorr@telemetry-investments.com>
	* configure.ac: Version 0.4.6.
