@@ -1,3 +1,7 @@
+2016-05-07         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* gawkextlib.h: Improve strhash API documentation with better comments.
+
 2014-12-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* strhash.c: Include <stddef.h>.
